--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,15 @@ body {
     background-color: grey;
 
 }
-
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+}
 #game {
-    width: 500px;
+    width: 80vw;
     height: 200px;
     border: 2px solid black;
     background-color: white;
@@ -30,17 +36,18 @@ body {
     100%{top: 150px;}
 }
 #block {
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     background-color: blue;
     position: relative;
-    top: 130px;
-    left: 480px;
-    animation: block 1s infinite linear;
+    top: 120px;
+    right: 100vw;
+    animation: block 3s infinite linear;
+    
 }
 
 @keyframes block{
-    0%{left: 480px;}
+    0%{left: 100vw;}
     100%{left: -40px;}
 
 }
